# agent-cag

./: .auth_token  .env.example  .flake8  .gitignore  BUILD_PLAN.md  CONFIGURATION_GUIDE.md  DEMO_MODE_SETUP.md  GIST_HOOK_USAGE.md  Makefile  README.md  README_BUILD.md  TESTING.md  check_system.py  configure.sh  docker-compose.demo.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.monitoring.full.yml  docker-compose.monitoring.parameterized.yml  docker-compose.monitoring.yml  docker-compose.parameterized.yml  docker-compose.remote-llm.yml  docker-compose.yml  gh_project_gist_hook.sh  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  test_report.json  test_system.py
.github/workflows/: tests.yml
agent-cag-speech-tools/: PACKAGE_INFO.md  README.md  SPEECH_TOOLS_README.md  agent_speak.py  agent_speak.sh  examples.sh  setup.sh
api/: Dockerfile  __init__.py  database.py  main.py  models.py  requirements.txt
asr/: Dockerfile  __init__.py  main.py  requirements.txt
benchmark/: run_benchmarks.py
integration_tests/: test_full_pipeline.py
llm/: Dockerfile  __init__.py  main.py  requirements.txt
monitoring/: prometheus.parameterized.yml  prometheus.yml
monitoring/grafana/dashboards/: agent-cag-dashboard.json
test_env/: pyvenv.cfg
tests/integration/: test_enhanced_integration.py
tests/load/: test_load.py
tests/monitoring/: test_monitoring.py
tests/security/: test_security.py
tests/unit/: test_api.py  test_asr.py  test_database.py  test_llm.py  test_tts.py
tts/: Dockerfile  __init__.py  main.py  requirements.txt
